# GameJam_2019_1

./: README.md
gra/: Base  Building  Graphics.txt  Makefile
gra/Grafiki/animacja/: hipek1.txt  hipek2.txt  hipek3.txt  hipek4.txt  hipek5.txt  npc_drabina1.txt  npc_drabina2.txt  npc_drabina3.txt  npc_drabina4.txt  npc_drabina5.txt  ogien.txt  ogien_gracz.txt  smoke.txt  woda.txt
gra/Grafiki/animacja/menuanim/: gasi.txt  gniot.txt  ludek.txt  plonie.txt
kod/: AConfig.hpp  Actor.cpp  Actor.hpp  ActorPtr.hpp  AnimationBank.cpp  AnimationBank.hpp  Base.cpp  Base.hpp  Body.cpp  Body.hpp  Building.cpp  Building.hpp  CMakeLists.txt  Caller.hpp  Casts.hpp  Config.cpp  Config.hpp  Config.inl  Control.hpp  CreatorInitializer.hpp  Cursor.cpp  Cursor.hpp  Drawable.hpp  FireFighter.cpp  FireFighter.hpp  FixtureData.cpp  FixtureData.hpp  FontBank.cpp  FontBank.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  GlobalScene.cpp  GlobalScene.hpp  GlobalWindowEvents.hpp  Human.cpp  Human.hpp  Layers.hpp  ListenerDraw.hpp  (+26 more)
